[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "broadcast-server"
version = "0.1.0"
description = "Broadcast server and client"
requires-python = ">=3.14"
dependencies = [
    "aioconsole>=0.8.2",
    "websockets>=15.0.1",
]

[project.scripts]
broadcast-server = "broadcast_server.cli:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]
include = ["broadcast_server*"]
exclude = ["logs*"]
